
syntax = "proto3";

package auth;
option go_package = "./pb/auth";

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
  string role = 3; // "user" or "admin"
}

message SignUpResponse {
  string token = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

message LogoutRequest {
  string token = 1;
}

message LogoutResponse {
  bool success = 1;
}
